--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,6 +12,8 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
+      - name: Install pipenv
+        run: python -m pip install --upgrade pipenv
       - name: Install Python dependencies
         run: pipenv install --dev
       - name: Run tests
