--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,6 +16,8 @@ jobs:
         run: python -m pip install --upgrade pipenv
       - name: Install Python dependencies
         run: pipenv install --dev
+      - name: Create data directory
+        run: mkdir data
       - name: Generate secret key
         run: pipenv run python manage.py generate_secret_key
       - name: Run tests
