deploy static files in container

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -2,6 +2,7 @@
 chdir = /app
 module = choreminder.wsgi:application
 env = DJANGO_SETTINGS_MODULE=choreminder.settings.prod
+static-map = /static=static
 processes = 2
 threads = 2
 uid = www-data
