update devcontainer to use features

--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -1,5 +1,11 @@
 {
-    "image": "mcr.microsoft.com/vscode/devcontainers/python:3.10",
+    "name": "choreminder-dev-container",
+    "image": "mcr.microsoft.com/devcontainers/base:ubuntu",
+    "features": {
+        "ghcr.io/devcontainers/features/python:1": {
+            "version": "3.10"
+        }
+    },
     "customizations": {
         "vscode": {
             "extensions": [
